--- a/gofoodpro.css
+++ b/gofoodpro.css
@@ -13,6 +13,19 @@ nav {
 .delete-product{
     cursor: pointer;
 }
+.lessProduct{
+    cursor: pointer;
+    font-size: 2rem;
+    position: relative;
+    top: -1rem;
+    right: 0.2rem;
+}
+.moreProduct{
+    cursor: pointer;
+    position: relative;
+    left: 0.3rem;
+    top: 0.2rem;
+}
 .card-body {
     margin-bottom: 1rem;
 }
