--- a/gofoodpro.css
+++ b/gofoodpro.css
@@ -55,6 +55,11 @@ span{
         align-items: center;
     }
 }
+@media (max-width:350px){
+    .display-4{
+        font-size: 2.5rem;
+    }
+}
 
 @media (max-width: 767px) {
     .navbar-brand {
