--- a/gofoodpro.css
+++ b/gofoodpro.css
@@ -52,7 +52,20 @@ span{
 .div-buttons{
     display: flex;
 }
+.delete-table{
+    cursor: pointer;
+    font-size: 1.5rem;
+    margin-left: 1rem;
+}
+
+
 @media (min-width: 768px) {
+    .img-td{
+        width: 40%
+    }
+    .paypal-buttons{
+        width: 19rem!important;
+    }
     .navbar-nav {
         width: 100%;
         display: flex;
@@ -65,6 +78,7 @@ span{
     }
 }
 @media (max-width:350px){
+  
     .display-4{
         font-size: 2.5rem;
     }
@@ -95,7 +109,12 @@ span{
         justify-content: center;
         margin: 0px;
     }
-
+    .img-td{
+        width: 100%
+    }
+    .paypal-buttons{
+        margin-top:1rem ;
+    }
     .navbar-toggler {
         position: absolute;
         top: 0;
