--- a/gofoodpro.css
+++ b/gofoodpro.css
@@ -1,10 +1,75 @@
-nav {
+body {
+    font-family: 'Lato', sans-serif;
+    background-color: transparent;
+}
+
+.jumbotron{
+    background-image:url(gfpimg/jumbo-xl-bg.jpg);
+    background-size: 100%;
+    background-position: center;
+}
+
+.jumbotron .display-4{
+    font-weight: 900;
+    text-transform: uppercase;
+}
+
+.jumbotron .lead{
+    font-weight: 400;
+}
+
+#numberCart{
+    font-size: 0.8rem;
+    color: white;
+    background-color: black;
+    border-radius: 20px;
+    margin-left: 0.5rem;
+    margin-right: 1rem;
+    margin-bottom: 1.5rem;
+    width: 20px;
+    text-align: center;
+}
+
+#myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color:#76c372; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+  }
+  
+  #myBtn:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
+  }
+
+.footer {
+    font-size: 1rem;
+    color: #ffffff;
+    background-color: #000000;
+}
+
+.header {
     background-color: #BBD646;
     font-size: 1.5rem;
 }
+.dropdown-menu a:active{
+    background-color: #76c372;
+}
 
-.navbar-nav {
-    text-align: center;
+.dropdown:hover .dropdown-menu {
+    display: block;
+  }
+
+.fa .fa-facebook {
+color: #ffffff;
 }
 
 .firsth{
@@ -25,6 +90,7 @@ nav {
 }
 .moreProduct{
     cursor: pointer;
+    font-size: 0.8rem;
     position: relative;
     left: 0.3rem;
     top: 0.2rem;
@@ -36,10 +102,6 @@ nav {
 .fa-shopping-cart {
 color: white;
 text-align: end;
-}
-
-span{
-    font-size: 0.8rem;
 }
 
 .add-cart {
@@ -56,7 +118,8 @@ span{
     .navbar-nav {
         width: 100%;
         display: flex;
-        justify-content: flex-end;
+        justify-content: center;
+
     }
 
     .cart {
@@ -86,6 +149,11 @@ span{
         justify-content: center;
         margin-left: 1rem;
     }
+    
+    .fa-shopping-cart {
+        color: white;
+        justify-content: end;
+    }
 }
 
 @media (max-width: 767px) {
@@ -100,5 +168,12 @@ span{
         position: absolute;
         top: 0;
         left: 0;
+    }
+
+    .cart {
+        position: absolute;
+        top: 0;
+        right: 0;
+        list-style: none;
     }
 }
