--- a/gofoodpro.css
+++ b/gofoodpro.css
@@ -114,7 +114,23 @@ text-align: end;
 .div-buttons{
     display: flex;
 }
+.delete-table{
+    cursor: pointer;
+    font-size: 1.5rem;
+    margin-left: 1rem;
+}
+
+
 @media (min-width: 768px) {
+    .img-td{
+        width: 40%
+    }
+    .img-td-home{
+        width: 100%;
+    }
+    .paypal-buttons{
+        width: 19rem!important;
+    }
     .navbar-nav {
         width: 100%;
         display: flex;
@@ -128,6 +144,7 @@ text-align: end;
     }
 }
 @media (max-width:350px){
+  
     .display-4{
         font-size: 2.5rem;
     }
@@ -163,7 +180,12 @@ text-align: end;
         justify-content: center;
         margin: 0px;
     }
-
+    .img-td{
+        width: 100%
+    }
+    .paypal-buttons{
+        margin-top:1rem ;
+    }
     .navbar-toggler {
         position: absolute;
         top: 0;
