--- a/gofoodpro.css
+++ b/gofoodpro.css
@@ -3,22 +3,22 @@ body {
     background-color: transparent;
 }
 
-.jumbotron{
-    background-image:url(gfpimg/jumbo-xl-bg.jpg);
+.jumbotron {
+    background-image: url(gfpimg/jumbo-xl-bg.jpg);
     background-size: 100%;
     background-position: center;
 }
 
-.jumbotron .display-4{
+.jumbotron .display-4 {
     font-weight: 900;
     text-transform: uppercase;
 }
 
-.jumbotron .lead{
+.jumbotron .lead {
     font-weight: 400;
 }
 
-#numberCart{
+#numberCart {
     font-size: 0.8rem;
     color: white;
     background-color: black;
@@ -31,24 +31,38 @@ body {
 }
 
 #myBtn {
-    display: none; /* Hidden by default */
-    position: fixed; /* Fixed/sticky position */
-    bottom: 20px; /* Place the button at the bottom of the page */
-    right: 30px; /* Place the button 30px from the right */
-    z-index: 99; /* Make sure it does not overlap */
-    border: none; /* Remove borders */
-    outline: none; /* Remove outline */
-    background-color:#76c372; /* Set a background color */
-    color: white; /* Text color */
-    cursor: pointer; /* Add a mouse pointer on hover */
-    padding: 15px; /* Some padding */
-    border-radius: 10px; /* Rounded corners */
-    font-size: 18px; /* Increase font size */
-  }
-  
-  #myBtn:hover {
-    background-color: #555; /* Add a dark-grey background on hover */
-  }
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Fixed/sticky position */
+    bottom: 20px;
+    /* Place the button at the bottom of the page */
+    right: 30px;
+    /* Place the button 30px from the right */
+    z-index: 99;
+    /* Make sure it does not overlap */
+    border: none;
+    /* Remove borders */
+    outline: none;
+    /* Remove outline */
+    background-color: #76c372;
+    /* Set a background color */
+    color: white;
+    /* Text color */
+    cursor: pointer;
+    /* Add a mouse pointer on hover */
+    padding: 15px;
+    /* Some padding */
+    border-radius: 10px;
+    /* Rounded corners */
+    font-size: 18px;
+    /* Increase font size */
+}
+
+#myBtn:hover {
+    background-color: #555;
+    /* Add a dark-grey background on hover */
+}
 
 .footer {
     font-size: 1rem;
@@ -60,61 +74,68 @@ body {
     background-color: #BBD646;
     font-size: 1.5rem;
 }
-.dropdown-menu a:active{
+
+.dropdown-menu a:active {
     background-color: #76c372;
 }
 
 .dropdown:hover .dropdown-menu {
     display: block;
-  }
-
-.fa .fa-facebook {
-color: #ffffff;
 }
 
-.firsth{
+.fa .fa-facebook {
+    color: #ffffff;
+}
+
+.firsth {
     margin-top: 6rem;
 }
 
-.delete-product{
+.delete-product {
     cursor: pointer;
     position: absolute;
     left: 0;
 }
-.lessProduct{
+
+.lessProduct {
     cursor: pointer;
     font-size: 2rem;
     position: relative;
     top: -1rem;
     right: 0.2rem;
 }
-.moreProduct{
+
+.moreProduct {
     cursor: pointer;
     font-size: 0.8rem;
     position: relative;
     left: 0.3rem;
     top: 0.2rem;
 }
+
 .card-body {
     margin-bottom: 1rem;
 }
 
 .fa-shopping-cart {
-color: white;
-text-align: end;
+    color: white;
+    text-align: end;
 }
 
 .add-cart {
     color: #ffffff !important;
 }
-.modal-body{
+
+.modal-body {
     max-height: 20rem;
     overflow: auto;
 }
-.div-buttons{
+
+.div-buttons {
     display: flex;
 }
-.delete-table{
+
+.delete-table {
     cursor: pointer;
     font-size: 1.5rem;
     margin-left: 1rem;
@@ -122,15 +143,18 @@ text-align: end;
 
 
 @media (min-width: 768px) {
-    .img-td{
+    .img-td {
         width: 40%
     }
-    .img-td-home{
+
+    .img-td-home {
         width: 100%;
     }
-    .paypal-buttons{
-        width: 19rem!important;
+
+    .paypal-buttons {
+        width: 19rem !important;
     }
+
     .navbar-nav {
         width: 100%;
         display: flex;
@@ -143,30 +167,35 @@ text-align: end;
         align-items: center;
     }
 }
-@media (max-width:350px){
-  
-    .display-4{
+
+@media (max-width:350px) {
+
+    .display-4 {
         font-size: 2.5rem;
     }
-    .cart-page{
-     flex-direction: column;
-     align-items: center;
+
+    .cart-page {
+        flex-direction: column;
+        align-items: center;
     }
+
     .delete-product {
         left: 1rem;
     }
-    .div-buttons{
+
+    .div-buttons {
         -ms-flex: 0 0 100%;
         flex: 0 0 100%;
         max-width: 100%;
         display: unset;
     }
-    #whatsapp{
+
+    #whatsapp {
         display: flex;
         justify-content: center;
         margin-left: 1rem;
     }
-    
+
     .fa-shopping-cart {
         color: white;
         justify-content: end;
@@ -180,12 +209,15 @@ text-align: end;
         justify-content: center;
         margin: 0px;
     }
-    .img-td{
+
+    .img-td {
         width: 100%
     }
-    .paypal-buttons{
-        margin-top:1rem ;
+
+    .paypal-buttons {
+        margin-top: 1rem;
     }
+
     .navbar-toggler {
         position: absolute;
         top: 0;
