--- a/gofoodpro.css
+++ b/gofoodpro.css
@@ -9,6 +9,31 @@ body {
 #description-card {
     border: 1px solid;
     border-radius: .25rem;
+    max-height: 7rem;
+    overflow: auto;
+}
+#description-card::-webkit-scrollbar {
+    width: 8px;   
+    height: 8px;    
+}
+#description-card::-webkit-scrollbar-thumb {
+    background: #ccc;
+    border-radius: 4px;
+}
+#description-card::-webkit-scrollbar-thumb:hover {
+    background: #b3b3b3;
+    box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
+}
+#description-card::-webkit-scrollbar-track {
+    background: #e1e1e1;
+    border-radius: 4px;
+}
+#description-card::-webkit-scrollbar-thumb:active {
+    background-color: #999999;
+}
+#description-card::-webkit-scrollbar-track:hover,
+#description-card::-webkit-scrollbar-track:active {
+  background: #d4d4d4;
 }
 .modal-header {
     background-color: black;
