--- a/gofoodpro.css
+++ b/gofoodpro.css
@@ -9,13 +9,14 @@ body {
 #description-card {
     border: 1px solid;
     border-radius: .25rem;
-    max-height: 7rem;
+}
+
+#description-card-page {
+    max-height: 5rem;
     overflow: auto;
 }
-#description-card-page{
-    max-height: 11rem;
-    overflow: auto;
-}
+
+
 #description-card::-webkit-scrollbar,#description-card-page::-webkit-scrollbar {
     width: 8px;   
     height: 8px;    
@@ -48,7 +49,7 @@ a.disabled, button.disabled {
     color: white;
 }
 
-.modal-content .close{
+.modal-content .close {
     color: white;
 }
 .card {
@@ -181,6 +182,7 @@ text-align: end;
 
 .div-buttons {
     display: flex;
+    justify-content: flex-end;
 }
 
 .delete-table {
@@ -191,8 +193,9 @@ text-align: end;
 
 
 @media (min-width: 769px) {
+
     .img-td {
-        width: 40%
+        width: 100%
     }
 
     .img-td-home {
@@ -207,7 +210,6 @@ text-align: end;
         width: 100%;
         display: flex;
         justify-content: center;
-
     }
 
     .cart {
@@ -262,6 +264,7 @@ text-align: end;
 }
 
 @media (max-width: 768px) {
+
     .navbar-brand {
         width: 100%;
         display: flex;
@@ -272,7 +275,8 @@ text-align: end;
     .jumbotron {
         background-image: url(gfpimg/jumbo-bg-md.jpg);
         background-size: 100%;
-        background-position: center;}
+        background-position: center;
+    }
     
     #numberCart {
         font-size: 0.6rem;
@@ -302,7 +306,7 @@ text-align: end;
         left: 0;
     }
 
-    .img-td-home{
+    .img-td-home {
         width: 100%;
     }
 
@@ -318,14 +322,19 @@ text-align: end;
         background-size: 100%;
         background-position: center;
     }
+
     .jumbotron .display-4 {
         font-size: 3rem;
     }
+
     .jumbotron .lead {
         font-size: 1rem;
     }
-    @media (min-width: 1000px){
+}
+    @media (min-width: 1000px) {
         .jumbotron {
-            background-image: url(gfpimg/jumbo-bg1-mb.jpg);
+            background-image: url(gfpimg/jumbo-xl-bg1.jpg);
+            background-size: 100%;
+        background-position: center;
     }
 }
