--- a/gofoodpro.css
+++ b/gofoodpro.css
@@ -77,6 +77,10 @@ a.disabled, button.disabled {
     margin: 0;
 }
 
+#td-products .d-flex{
+
+}
+
 .jumbotron .lead {
     font-weight: 400;
     font-size: 2rem;
@@ -169,20 +173,44 @@ a.disabled, button.disabled {
     left: 0;
 }
 
-.lessProduct {
+#td-products .d-flex b{
+    font-size: 1.2rem;
+}
+
+#td-products .lessProduct {
+font-size: 2rem;
+margin-top: -0.5rem;
+margin-right: 0.6rem;
+justify-content: flex-start;
+align-items: center;
+}
+
+#td-products .moreProduct {
+    font-size: 1.5rem;
+    margin-top: -0.2rem;
+    margin-left: 0.4rem;
+    justify-content: flex-start;
+    align-items: center;
+    }
+
+div .card-body .d-flex{
+        font-size: 2rem;
+    }
+
+div .card-body .lessProduct {
+    cursor: pointer;
+    font-size: 3rem;
+    position: relative;
+    top: -0.7rem;
+    right: 0.7rem;
+}
+
+div .card-body .moreProduct {
     cursor: pointer;
     font-size: 2rem;
     position: relative;
-    top: -1rem;
-    right: 0.2rem;
-}
-
-.moreProduct {
-    cursor: pointer;
-    font-size: 0.8rem;
-    position: relative;
-    left: 0.3rem;
-    top: 0.2rem;
+    left: 0.5rem;
+    top: 0rem;
 }
 
 .card-body {
@@ -303,18 +331,20 @@ font-size: 2rem;
     }
     
     #numberCart {
-        font-size: 0.6rem;
+        font-size: 1rem;
+        font-weight: 900;
         color: white;
         background-color: black;
         border-radius: 50px;
         padding: 0.3rem;
-        margin-top: 0;
         margin-left: 0.2rem;
         margin-right: 1rem;
-        margin-bottom: 2rem;
-
         text-align: center;
     }
+
+    .fa-shopping-cart {
+        margin-top: 1rem;
+        }
 
     .img-td {
         width: 100%
@@ -352,7 +382,7 @@ font-size: 2rem;
     }
 
     .jumbotron .lead {
-        font-size: 1rem;
+        font-size: 2rem;
     }
 }
     @media (min-width: 1000px) {
