--- a/gofoodpro.css
+++ b/gofoodpro.css
@@ -12,20 +12,11 @@ body {
     border-radius: .25rem;
 }
 
-#total-cart {
-    display: flex;
-    justify-content: flex-end;
-}
-
 #description-card-page {
     max-height: 8rem;
     overflow: auto;
 }
 
-.formdelivery{
-    display: flex;
-    justify-content: flex-end;
-}
 
 #description-card::-webkit-scrollbar,#description-card-page::-webkit-scrollbar {
     width: 8px;   
@@ -66,19 +57,12 @@ a.disabled, button.disabled {
     border: none;
 }
 
-.modaltotal{
-    display: flex;
-    justify-content: flex-start;
-}
+
 .jumbotron .display-4 {
     font-size: 5rem;
     font-weight: 900;
     font-family: 'Pacifico', cursive;
     margin: 0;
-}
-
-#td-products .d-flex{
-
 }
 
 .jumbotron .lead {
@@ -155,10 +139,6 @@ a.disabled, button.disabled {
     background-color: #76c372;
 }
 
-.dropdown:hover {
-    display: block;
-}   
-
 .fa .fa-facebook {
     color: #ffffff;
 }
@@ -173,44 +153,20 @@ a.disabled, button.disabled {
     left: 0;
 }
 
-#td-products .d-flex b{
-    font-size: 1.2rem;
-}
-
-#td-products .lessProduct {
-font-size: 2rem;
-margin-top: -0.5rem;
-margin-right: 0.6rem;
-justify-content: flex-start;
-align-items: center;
-}
-
-#td-products .moreProduct {
-    font-size: 1.5rem;
-    margin-top: -0.2rem;
-    margin-left: 0.4rem;
-    justify-content: flex-start;
-    align-items: center;
-    }
-
-div .card-body .d-flex{
-        font-size: 2rem;
-    }
-
-div .card-body .lessProduct {
-    cursor: pointer;
-    font-size: 3rem;
-    position: relative;
-    top: -0.7rem;
-    right: 0.7rem;
-}
-
-div .card-body .moreProduct {
+.lessProduct {
     cursor: pointer;
     font-size: 2rem;
     position: relative;
-    left: 0.5rem;
-    top: 0rem;
+    top: -1rem;
+    right: 0.2rem;
+}
+
+.moreProduct {
+    cursor: pointer;
+    font-size: 0.8rem;
+    position: relative;
+    left: 0.3rem;
+    top: 0.2rem;
 }
 
 .card-body {
@@ -246,8 +202,12 @@ font-size: 2rem;
 
 @media (min-width: 769px) {
 
+    .dropdown:hover .dropdown-menu {
+        display: block;
+    }
+
     .img-td {
-        width: 100%;
+        width: 40%;
     }
 
     .img-td-home {
@@ -316,7 +276,7 @@ font-size: 2rem;
 }
 
 @media (max-width: 768px) {
-
+    
     .navbar-brand {
         width: 100%;
         display: flex;
@@ -331,20 +291,18 @@ font-size: 2rem;
     }
     
     #numberCart {
-        font-size: 1rem;
-        font-weight: 900;
+        font-size: 0.6rem;
         color: white;
         background-color: black;
         border-radius: 50px;
         padding: 0.3rem;
+        margin-top: 0;
         margin-left: 0.2rem;
         margin-right: 1rem;
+        margin-bottom: 2rem;
+
         text-align: center;
     }
-
-    .fa-shopping-cart {
-        margin-top: 1rem;
-        }
 
     .img-td {
         width: 100%
@@ -382,7 +340,7 @@ font-size: 2rem;
     }
 
     .jumbotron .lead {
-        font-size: 2rem;
+        font-size: 1rem;
     }
 }
     @media (min-width: 1000px) {
