--- a/gofoodpro.css
+++ b/gofoodpro.css
@@ -155,9 +155,9 @@ a.disabled, button.disabled {
     background-color: #76c372;
 }
 
-.dropdown:hover {
+.dropdown:hover .dropdown-menu {
     display: block;
-}   
+}
 
 .fa .fa-facebook {
     color: #ffffff;
