--- a/gofoodpro.css
+++ b/gofoodpro.css
@@ -368,7 +368,12 @@ background-color: red;
         align-items: center;
     }
 
-    .jumbotron {
+    .nh {
+        background-image: url(gfpimg/bg-xl-gfp-7.jpg);
+      background-size: cover;
+    }
+
+    .jumbotron{
         background-image: url(gfpimg/bg-xl-gfp-4.jpg);
       background-size: cover;
     }
