--- a/gofoodpro.css
+++ b/gofoodpro.css
@@ -368,7 +368,7 @@ background-color: red;
         align-items: center;
     }
 
-    .nh {
+    .jumbotron .nuestra-historia {
         background-image: url(gfpimg/bg-xl-gfp-7.jpg);
       background-size: cover;
     }
