--- a/gofoodpro.css
+++ b/gofoodpro.css
@@ -613,15 +613,20 @@ background-color: red;
     }
 }
 @media (max-width:450px){
+    .carousel-caption .display-4 {
+        font-size: 1.25rem;
+        margin: 0!important;
+        margin-top: -1rem!important;
+    }
     .carousel-inner img {
-        height: 10rem;
+        height: 8rem;
     }
     .carouselicon {
         height: 75px!important;
         width: 4rem;
     }
     #display-img-h1 {
-        margin-top: 4rem!important;
+        margin-top: 3rem!important;
     }
 }
     @media (min-width: 1000px) {
@@ -649,6 +654,10 @@ background-color: red;
     .navbar-expand-md .navbar-nav .nav-link {
         padding-right: 0;
         padding-left: 0;
+    }
+    .btn-success {
+        padding: 0rem 0.5rem;
+        font-size: 1rem;
     }
 }
 @media (max-width:1366px) and (min-width:1180px){
