--- a/gofoodpro.css
+++ b/gofoodpro.css
@@ -599,6 +599,7 @@ background-color: red;
         font-size: 1.2rem;
         margin-top: 0.5rem;
     }
+    
     .jumbotron p {
         margin-top: -10px;
         font-size: 1rem;
@@ -614,19 +615,24 @@ background-color: red;
 }
 @media (max-width:450px){
     .carousel-caption .display-4 {
-        font-size: 1.25rem;
+        font-size: 1rem;
         margin: 0!important;
-        margin-top: -1rem!important;
+    }
+    #display-img-h1 {
+        font-size: 1rem;
     }
     .carousel-inner img {
         height: 8rem;
+    }
+    .carousel-caption .lead {
+        font-size: .8rem;
     }
     .carouselicon {
         height: 75px!important;
         width: 4rem;
     }
     #display-img-h1 {
-        margin-top: 3rem!important;
+        margin-top: 3.5rem!important;
     }
 }
     @media (min-width: 1000px) {
@@ -674,6 +680,22 @@ background-color: red;
 @media (max-width:1260px) and (min-width:980px){
     .p-history{
         font-size: .75rem;
+    }
+}
+@media (max-width: 1100px){
+    .jumboiconp {
+        height: 100px;
+        width: 100px;
+    }
+    .pnuestra {
+        font-size: .8rem;
+    }
+}
+@media (max-width:990px){
+    .img-fluid {
+        max-width: 40%;
+        height: auto;
+        margin-left: 30%;
     }
 }
 
