--- a/gofoodpro.css
+++ b/gofoodpro.css
@@ -152,7 +152,7 @@ a.disabled, button.disabled {
     font-size: 2rem;
     color: white;
 }
-#numberCart {
+#numberCart, #numberCartMobile {
     font-size: 0.8rem;
     color: white;
     background-color: black;
@@ -548,7 +548,7 @@ background-color: red;
       color: white;
     }
     
-    #numberCart {
+    #numberCart, #numberCartMobile {
         font-size: 1rem;
         font-weight: 900;
         color: white;
