--- a/gofoodpro.css
+++ b/gofoodpro.css
@@ -683,7 +683,7 @@ background-color: red;
         font-size: 1rem;
         margin: 1rem;
     }
-    
+   
     .carousel-control-prev-icon {
         height: 25px;
         width: 40px;
@@ -713,6 +713,10 @@ background-color: red;
     }
     .btn-success {
         font-size: .8rem!important;
+    }
+    .add-cart{
+        font-size: 1.1rem!important;
+        padding: .375rem .75rem!important;
     }
 }
     @media (min-width: 1000px) {
